prevent accordion from overflowing parent container

--- a/shared/css/pepperlillie-nearby-locations-shared.css
+++ b/shared/css/pepperlillie-nearby-locations-shared.css
@@ -6,6 +6,8 @@
 
 .pl-nearby-locations-container .accordion-container {
     width: 30%;
+    height: 500px;
+    overflow: scroll;
     float: left;
 }
 
